--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "immer": "^11.0.1",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
